src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Celigo_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Celigo Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>CeligoContract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Champions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Economic Buyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
        <relationshipName>EconomicBuyers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligible_Account_For_Channel_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eligible Account For Channel Sales</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Eligible Account For Channel Sales)</relationshipLabel>
        <relationshipName>EligibleAccountForChannelSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (End User)</relationshipLabel>
        <relationshipName>EndUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities (From Contract)</relationshipLabel>
        <relationshipName>FromContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
        <relationshipName>Resellers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ringdna100__Call_Attempts__c</fullName>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Days_Since_Last_Attempt_Call_or_Email__c</fullName>
        <formula>IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), NULL, 
IF(AND(!ISBLANK(ringdna100__Last_Outbound_Call__c), ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Outbound_Call__c), 
IF(AND(ISBLANK(ringdna100__Last_Outbound_Call__c), !ISBLANK(ringdna100__Last_Email_Attempt__c)), (NOW() - ringdna100__Last_Email_Attempt__c), 
IF(ringdna100__Last_Outbound_Call__c &gt; ringdna100__Last_Email_Attempt__c, (NOW() - ringdna100__Last_Outbound_Call__c), (NOW() - ringdna100__Last_Email_Attempt__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Attempt (Call or Email)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Email_Attempts__c</fullName>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Inbound_Call__c</fullName>
        <label>First Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__First_Outbound_Call__c</fullName>
        <label>First Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Email_Attempt__c</fullName>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Inbound_Call__c</fullName>
        <label>Last Inbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Last_Outbound_Call__c</fullName>
        <label>Last Outbound Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ringdna100__Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ringdna100__RingDNA_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RingDNA Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Call_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Outbound_Call__c), NULL, (NOW() - ringdna100__Last_Outbound_Call__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Call Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Days__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, NOW() - ringdna100__Last_Email_Attempt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_Since_Last_Email_Attempt_Minutes__c</fullName>
        <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, (NOW() - ringdna100__Last_Email_Attempt__c) * 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Email Attempt (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Dial_Minutes__c</fullName>
        <label>Time to First Dial (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ringdna100__Time_to_First_Response__c</fullName>
        <label>Time to First Response (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>